# NucleoOs

./: .gitattributes  .gitignore  CITATION.cff  CLAUDE.md  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  OVERSIZED-ASSETS.md  README.md  THIRD_PARTY.md  _flash_log.txt  package.json  piano-cardputer-os.md
.claude/: launch.json  settings.json
.github/: CODEOWNERS  pull_request_template.md
_scratch/: com3_cap.py  com3_log.txt  fase0-map_anima-fw.md  fase0-map_api-surface.md  fase0-map_concurrency.md  fase0-map_firmware-core.md  fase0-map_ram-budget.md  fase0-map_tools-gates.md  fase0-map_web-apps.md  fase0-map_web-shell.md  fase1-confirmed.json  fase1-confirmed.txt  time-asks.txt
android-app/: capacitor.config.json  package-lock.json
docs/: anima-agent.md  anima-atelier.md  anima-code.md  anima-context-engine.md  anima-cortex.md  anima-forge.md  anima-knowledge-graph.md  anima-knowledge-ollama.md  anima-knowledge-scale.md  anima-memory.md  anima-native.md  anima-online.md  anima-roadmap.md  anima-web-knowledge.md  anima.md  app-categories.md  app-manifest.md  app-runtimes.md  architecture.md  debugging.md  device-ui.md  event-protocol.md  game-mini-vs.md  i18n.md  keydeck.md  maintenance-2026-06.md  media.md  memory-budget.md  native-ui-kit.md  notify-protocol.md  partition-table.md  registry.md  releasing.md  repo-history-purge.md  roadmap.md  security.md  setup-wizard.md  storage.md  swarm-architecture.md  testing.md  (+4 more)
firmware/: CMakeLists.txt  README.md  _cap2.py  build_log.txt  capture_serial.py  deploy_run.txt  partitions.csv  sdkconfig.defaults  (+1 more)
firmware/components/libssh2/: CMakeLists.txt  libssh2_config.h
firmware/components/nucleo_anima/: CMakeLists.txt  Kconfig  anima_internal.h  anima_solve.c  nucleo_anima.c  nucleo_anima_bench.c  nucleo_anima_facet.c  nucleo_anima_hdc.c  nucleo_anima_l1.c  nucleo_anima_learn.c  nucleo_anima_learn.h  nucleo_anima_online.c  nucleo_anima_online.h  nucleo_anima_profile.c  nucleo_anima_translate.c  nucleo_anima_translate.h  nucleo_knowledge_manifest.h
firmware/components/nucleo_anima/include/: nucleo_anima.h
firmware/components/nucleo_app/: ANTI-FLICKER.md  CMakeLists.txt  app_airspace.cpp  app_alarm.cpp  app_anima.cpp  app_beacon.cpp  app_ble.cpp  app_brawler.cpp  app_calc.cpp  app_calendar.cpp  app_cardler.cpp  app_chrono.cpp  app_clock.cpp  app_constellations.cpp  app_dice.cpp  app_ethernet.cpp  app_evilportal.cpp  app_fido.cpp  app_files.cpp  app_gfx.h  app_goniometer.cpp  app_info.cpp  app_ir.cpp  app_keydeck.cpp  app_level.cpp  app_link.cpp  app_mail.cpp  app_micspec.cpp  app_notepad.cpp  app_notify.cpp  app_payloads.cpp  app_pedometer.cpp  app_photos.cpp  app_pinball.cpp  app_pixelfix.cpp  app_player.cpp  app_player_db.cpp  app_player_db.h  app_poker.cpp  app_pomodoro.cpp  (+70 more)
firmware/components/nucleo_app/include/: nucleo_app.h  nucleo_exclusive.h  ota_listen_fsm.h
firmware/components/nucleo_audio/: CMakeLists.txt  idf_component.yml  nucleo_audio.c  nucleo_audio_http.c  nucleo_audio_mp3.c  nucleo_audio_priv.h
firmware/components/nucleo_audio/include/: nucleo_audio.h
firmware/components/nucleo_ble/: CMakeLists.txt  nucleo_ble.c  nucleo_ble_adv.c  nucleo_ble_hid.c  nucleo_ble_hid.h  nucleo_ble_stub.c
firmware/components/nucleo_ble/include/: nucleo_ble.h  nucleo_ble_adv.h
firmware/components/nucleo_eth/: CMakeLists.txt  eth_frames.c  nucleo_eth.c  nucleo_w5500.c
firmware/components/nucleo_eth/include/: eth_frames.h  nucleo_eth.h  nucleo_w5500.h
firmware/components/nucleo_evilportal/: CMakeLists.txt  nucleo_evilportal.c  nucleo_evilportal_clone.c
firmware/components/nucleo_evilportal/include/: nucleo_evilportal.h  nucleo_evilportal_clone.h
firmware/components/nucleo_fido/: CMakeLists.txt
firmware/components/nucleo_fido/core/: fido_authdata.c  fido_authdata.h  fido_cbor.c  fido_cbor.h  fido_cose.c  fido_cose.h  fido_cred_store.h  fido_cred_store_ram.c  fido_ctap2.c  fido_ctap2.h  fido_ctaphid.c  fido_ctaphid.h  fido_keywrap.c  fido_keywrap.h  fido_pin.c  fido_pin.h  fido_u2f.c  fido_u2f.h
firmware/components/nucleo_fido/include/: fido_crypto.h  nucleo_fido.h
firmware/components/nucleo_fido/port/: fido_api.c  fido_attestation.h  fido_bootmode.c  fido_crypto_mbedtls.c  fido_efuse_key.c  fido_port.h  fido_service.c  fido_store_nvs.c
firmware/components/nucleo_fsapi/: CMakeLists.txt  nucleo_fsapi.c
firmware/components/nucleo_fsapi/include/: nucleo_fsapi.h
firmware/components/nucleo_httpd/: CMakeLists.txt  nucleo_httpd.c
firmware/components/nucleo_httpd/include/: nucleo_httpd.h
firmware/components/nucleo_link/: CMakeLists.txt  nucleo_link_api.c  nucleo_link_bruce.c  nucleo_link_espnow.c  nucleo_link_proto.c
firmware/components/nucleo_link/include/: nucleo_link.h  nucleo_link_bruce.h  nucleo_link_espnow.h
firmware/components/nucleo_mesh/: CMakeLists.txt  nucleo_chorus.c  nucleo_mesh.c  nucleo_swarm.c  nucleo_swarm_espnow.c  nucleo_swarm_sec.c
firmware/components/nucleo_mesh/include/: nucleo_chorus.h  nucleo_mesh.h  nucleo_swarm.h  nucleo_swarm_espnow.h  nucleo_swarm_sec.h
firmware/components/nucleo_pnet/: CMakeLists.txt  nucleo_pnet.c
firmware/components/nucleo_pnet/include/: nucleo_pnet.h
firmware/components/nucleo_recorder/: CMakeLists.txt  nucleo_recorder.c
firmware/components/nucleo_recorder/include/: nucleo_recorder.h
firmware/components/nucleo_setup/: CMakeLists.txt  nucleo_setup.c  wifi_policy.c
firmware/components/nucleo_setup/include/: nucleo_setup.h  wifi_policy.h
firmware/components/nucleo_tts/: CMakeLists.txt  nucleo_tts.c  nucleo_tts_index.c  nucleo_tts_plan.c
firmware/components/nucleo_tts/include/: nucleo_tts.h  nucleo_tts_index.h
firmware/components/nucleo_voice/: CMakeLists.txt  nucleo_voice.c  nucleo_voice_dsp.c  nucleo_voice_dsp.h
firmware/components/nucleo_voice/include/: nucleo_voice.h
firmware/components/nucleo_wifiatk/: CMakeLists.txt  nucleo_wifiatk.c  nucleo_wifiatk_eapol.c  nucleo_wifiatk_probe.c
firmware/components/nucleo_wifiatk/include/: nucleo_wifiatk.h  nucleo_wifiatk_eapol.h  nucleo_wifiatk_probe.h
firmware/main/: CMakeLists.txt  main.c
(+2006 files in other folders)
